--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@ document.addEventListener('keydown', function(e) {
         FOUNDER / FONDATEUR / 创始人</a></h2>
 
       <div class="section-body">
-        <div class="img-box"><img src="images/about_founder.jpg" alt=""></div>
+        <div class="img-box"><img src="images/about_founder.png" alt=""></div>
 
         <div class="lang-fr-en">
           <div class="lang-block lang-fr">
