--- a/about.html
+++ b/about.html
@@ -205,56 +205,70 @@ document.addEventListener('keydown', function(e) {
       </div>
     </div>
 
-    <!-- ===== 2) Founder ===== -->
-    <div class="section" id="founder">
-      <h2 class="section-title-main"><a href="#founder">
-        FOUNDER / FONDATEUR / 创始人</a></h2>
+<!-- ===== 2) Founder ===== -->
+<div class="section" id="founder">
+  <h2 class="section-title-main"><a href="#founder">
+    FOUNDER / FONDATEUR / 创始人</a></h2>
 
-      <div class="section-body">
-        <div class="img-box"><img src="images/about_founder.png" alt=""></div>
+  <div class="section-body">
+    <div class="img-box"><img src="images/about_founder.png" alt=""></div>
 
-        <div class="lang-fr-en">
-          <div class="lang-block lang-fr">
-            Cai Yicong est né au Lingnan et s’est formé entre Canton, Paris et Lyon.  
-            De la trame urbaine au galbe d’une poignée, il « circule » entre les échelles, convaincu que
-            l’expérience précède toujours le discours.  
-            Après des projets publics en Chine et en France, il crée Para Studio en novembre 2024,
-            où matériaux bas-carbone, BIM, paramétrique et IA générative marient poésie et précision.<br><br>
-            Para Studio dialogue en deux langues, puise dans deux horizons : ombre de bambou,
-            corniches haussmanniennes, algorithme numérique et menuiserie traditionnelle.
-            Pour lui, le chantier n’est que l’ouverture d’une scène : le studio cultive moins une signature
-            qu’une atmosphère durable au cœur de la ville.
-          </div>
+    <div class="lang-fr-en">
+<div class="lang-block lang-fr">
+  Né à Lingnan, Cai Yicong a été formé en architecture à Lyon et Paris. 
+  Il a travaillé sur divers projets publics, développant une sensibilité aux échelles et aux contextes culturels.  
+  Il défend l’idée que l’espace s’éprouve avant de se décrire.  
+  L’urbanisme lui a appris à lire la ville à grande échelle ; l’école française lui a donné une vision à la fois poétique et structurelle.  
+  Pour lui, l’architecture est une polyphonie où client, site, climat et culture dialoguent ensemble.<br><br>
 
-          <div class="lang-block lang-en">
-            Born in Lingnan and educated in Guangzhou, Paris and Lyon, Cai Yicong moves freely between scales,
-            believing that experience precedes explanation.  
-            After public projects in China and France, he founded Para Studio in November 2024, where low-carbon
-            materials, BIM, parametric tools and generative AI unite poetry with precision.<br><br>
-            Speaking two languages and drawing on two cultures—bamboo shadows and Haussmann cornices,
-            digital algorithms and handcrafted joinery—Para Studio sees each building as an open-ended theatre,
-            seeking atmosphere over logo, resonance over signature.
-          </div>
+  En novembre 2024, il fonde Para Studio. Le studio intègre matériaux bas-carbone, conception paramétrique, BIM collaboratif et IA générative, 
+  pour allier précision technique et poésie spatiale.  
+  Dans une double culture franco-chinoise, Para Studio développe une méthode bilingue et contextuelle, valorisant 
+  l’artisanat autant que les algorithmes. Le chantier devient ici un prologue : le début du récit spatial.<br><br>
 
-          <div class="tabs">
-            <span class="tab-btn active" data-lang="fr" onclick="switchLang('founder','fr')">FR</span>
-            <span class="tab-btn"        data-lang="en" onclick="switchLang('founder','en')">EN</span>
-          </div>
-        </div>
+  Les projets du studio allient rigueur et douceur : une logique numérique sensible, 
+  une attention fine aux matières. Au-delà des formes, Para Studio cherche à créer des ambiances durables, 
+  capables de s’ancrer dans la mémoire urbaine.
+</div>
 
-        <div class="lang-cn">
-          蔡一聪 出生于岭南、游学于巴黎与里昂，他始终在“尺度”与“边界”之间自由穿梭——从城市肌理到一枚门把手的曲线，
-          他相信：空间体验先于文字阐释。城市规划的底色，让他敏锐地洞察建筑在大街区里的姿态；
-          法国建筑教育则赋予他诗性与结构并置的双重视角。因此，他坚持：建筑绝非单声部造型，而是一场客户、场地、气候与文化的多声对话。<br><br>
-          在中法两地的公共建筑实践中，他关注博物馆、会议中心、文化综合体与城市客厅——观察光影牵引人流，广场与街角重塑归属感，
-          确信建筑应重新编排公众与城市的关系。2024 年 11 月，他创立 Para Studio，让技术与浪漫并肩：低碳材料、BIM 协同、
-          参数化设计与生成式 AI 像呼吸般自然融入，只为让诗意精准落地。<br><br>
-          Para Studio 以双语沟通，也在双重文化汲取灵感：竹影掠过奥斯曼山墙，数字算法呼应手工榫卯。
-          蔡一聪将建筑视作一幕永不落幕的剧场——当施工结束，空间对人的影响才刚开始；
-          Para Studio 追求的不是刻板签名，而是一种可被共鸣的氛围，召唤好奇、塑造行为，并在城市叙事中留下持久注脚。
-        </div>
+<div class="lang-block lang-en">
+  Born in Lingnan, Cai Yicong trained in architecture in Lyon and Paris.  
+  He worked on public projects that sharpened his sensitivity to scale and cultural context.  
+  He believes spatial experience comes before explanation.  
+  Urban planning gave him a broad vision of cities, while French education taught him to balance structure with poetry.  
+  To him, architecture is a polyphonic dialogue between client, site, climate, and culture.<br><br>
+
+  In November 2024, he founded Para Studio — where low-carbon materials, parametric design, BIM and generative AI 
+  are combined with spatial storytelling.  
+  The studio embraces a bilingual and bicultural method, where digital precision meets craftsmanship.  
+  For him, each site is a stage, and architecture begins where construction ends.<br><br>
+
+  Para Studio’s work balances clarity and softness: digital logic shaped by human warmth, 
+  precision grounded in materials. Rather than a formal style, the studio seeks atmospheres that quietly echo within the city.
+</div>
+
+      <div class="tabs">
+        <span class="tab-btn active" data-lang="fr" onclick="switchLang('founder','fr')">FR</span>
+        <span class="tab-btn"        data-lang="en" onclick="switchLang('founder','en')">EN</span>
       </div>
     </div>
+
+    <div class="lang-cn">
+      蔡一聪 出生于岭南，在法国里昂与巴黎接受系统的建筑教育，并参与多项公共项目实践，积累了多尺度、跨文化的设计经验。
+      他相信：空间体验先于文字阐释。城市规划的底色，让他敏锐地洞察建筑在大街区里的姿态；
+      法国建筑教育则赋予他诗性与结构并置的双重视角。因此，他坚持：建筑从不是单一旋律，
+      它是一场由客户、场地、气候与文化共同奏响的多声部对话。<br><br>
+
+      2024年11月，他创立 Para Studio，融合低碳材料、BIM 协同、参数化设计与生成式 AI，追求技术与诗意的双重精准。
+      在中法的双重语境中，Para Studio 形成了双语双视角的设计方法论。
+      他关心公共性、文化性与城市肌理之间的关系，强调算法逻辑与传统工艺并重，将建筑工地视作一场剧场式的开幕 —— 
+      空间不止是物质呈现，更是叙事的开始。<br><br>
+
+      Para Studio 的作品冷静与柔性并置：数字理性中保有人文温度，尺度掌控中透出材料细节。
+      他所追求的不是显性的形式标签，而是一种在城市中悄然沉淀、持久回响的气氛与记忆。
+    </div>
+  </div>
+</div>
 
     <!-- ===== 3) Design Methodology ===== -->
     <div class="section" id="design-methodology">
